Updated README to be more accurate.
Now it says what it actually is doing.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This Repo contains misc projects and code examples for the python corse.
+This repo contains the text adventure for the Python course. It is a basic and a skeleton project for this system.
